cambios en descripciones

--- a/IngenieriaBiomedica.html
+++ b/IngenieriaBiomedica.html
@@ -30,15 +30,15 @@
                 <p>
                    
                     </p><ol>
-                        <li> <span style="font-weight:bolder ">AL</span> (Instrumentación): Técnicas, análisis y complejidad de los algoritmos.</li>
-                        <li> <span style="font-weight:bolder ">AR</span> (Biomecánica): Representación y organización de los datos, a bajo nivel, en un ordenador.</li>
-                        <li> <span style="font-weight:bolder ">ED</span> (Desarrollo de Software Medico): Estructuras de información finitas. Estructuras de datos y conceptos desde las matemáticas discretas, fundamentales en la informática.</li>
+                        <li> <span style="font-weight:bolder ">Instrumentación</span> (Instrumentación): Técnicas, análisis y complejidad de los algoritmos.</li>
+                        <li> <span style="font-weight:bolder ">Biomecánica</span> (Biomecánica): Representación y organización de los datos, a bajo nivel, en un ordenador.</li>
+                        <li> <span style="font-weight:bolder ">DSM</span> (Desarrollo de Software Medico): Estructuras de información finitas. Estructuras de datos y conceptos desde las matemáticas discretas, fundamentales en la informática.</li>
                         <li> <span style="font-weight:bolder ">GI</span> (Gestión de la información): Sistema de modelado y almacenamiento de datos (bases de datos).</li>
-                        <li> <span style="font-weight:bolder ">SI</span> (Administración Hospitalaria): Sistemas de optimización, probabilista y heurísticas, para resolver problemas complejos.</li>
-                        <li> <span style="font-weight:bolder ">RC</span> (Gestión de Equipo Medico): Comunicación entre ordenadores a través de la red, y cómo es tratada la información que es trasmitida.</li>
-                        <li> <span style="font-weight:bolder ">SO</span> (Ingenieria clínica): Funcionamiento, organización y seguridad de los sistemas operativos.</li>
-                        <li> <span style="font-weight:bolder ">PD</span> (Investigación ): Estudio de sistemas que hacen uso de los recursos del cpu (múltiples núcleos) y que trabajan de manera distribuida.</li>
-                        <li> <span style="font-weight:bolder ">LP</span> (Desarrollo de nuevas tecnologias para el entorno hospitalario): Sobre los lenguajes de programación existente, además del estudio de su diseño e implementación.</li>
+                        <li> <span style="font-weight:bolder ">AH</span> (Administración Hospitalaria): Sistemas de optimización, probabilista y heurísticas, para resolver problemas complejos.</li>
+                        <li> <span style="font-weight:bolder ">GEM</span> (Gestión de Equipo Medico): Comunicación entre ordenadores a través de la red, y cómo es tratada la información que es trasmitida.</li>
+                        <li> <span style="font-weight:bolder ">IC</span> (Ingenieria clínica): Funcionamiento, organización y seguridad de los sistemas operativos.</li>
+                        <li> <span style="font-weight:bolder ">Investigacion</span> (Investigación ): Estudio de sistemas que hacen uso de los recursos del cpu (múltiples núcleos) y que trabajan de manera distribuida.</li>
+                        <li> <span style="font-weight:bolder ">DTEH</span> (Desarrollo de nuevas tecnologias para el entorno hospitalario): Sobre los lenguajes de programación existente, además del estudio de su diseño e implementación.</li>
                         
                     </ol>
                     <br>
