cambios de prueba

--- a/sobremi.html
+++ b/sobremi.html
@@ -21,7 +21,8 @@
                      en la Universidad Politecnica de Sinaloa (UPSIN), curso el 7mo. cuatrimestre. 
                 </p>
                 <p>
-                    Mi principal motivacion.<br><br>
+                    Mi principal motivacion es contribuir a la sociedad, por medio de proyectos e investigaciones que ayuden a resolver problematicas 
+                    del hambito hospitalario, en cuestion de la mejora de atencion y la calidad de esta.<br><br>
                 </p>
     
                
